--- a/index4.html
+++ b/index4.html
@@ -32,7 +32,7 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="js-scroll-trigger" href="#page-top">Josh Sutcliffe</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#page-top">Home</a>
@@ -47,7 +47,7 @@
         <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#contact">Contact</a>
+        <a class="js-scroll-trigger" href="#footer">Contact</a>
       </li>
     </ul>
   </nav>
@@ -93,23 +93,23 @@
           <h4>
             <strong>Unity VR Development</strong>
           </h4>
-          <p class="text-faded mb-0">Development of VR experience using Unity Engine</p>
+          <p class="text-faded mb-0">Development of VR experiences using Unity Engine</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-pencil"></i>
           </span>
           <h4>
-            <strong>Redesigned</strong>
+            <strong>Compositing</strong>
           </h4>
-          <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
+          <p class="text-faded mb-0">High End Compositng using Nuke</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-like"></i>
           </span>
           <h4>
-            <strong>Favorited</strong>
+            <strong>VFX Design and Development</strong>
           </h4>
           <p class="text-faded mb-0">Millions of users
             <i class="fas fa-heart"></i>
@@ -120,12 +120,13 @@
             <i class="icon-mustache"></i>
           </span>
           <h4>
-            <strong>Question</strong>
+            <strong>VR User Experience Design</strong>
           </h4>
-          <p class="text-faded mb-0">I mustache you a question...</p>
+          <p class="text-faded mb-0">User Experience design for High Immersion VR projects</p>
         </div>
       </div>
     </div>
+	
   </section>
 
   <!-- Callout -->
@@ -150,8 +151,8 @@
           <a class="portfolio-item" href="#">
             <span class="caption">
               <span class="caption-content">
-                <h2>Stationary</h2>
-                <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                <h2>Rube Goldberg VR</h2>
+                <p class="mb-0">A physics based chain reaction VR game</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
@@ -161,8 +162,8 @@
           <a class="portfolio-item" href="#">
             <span class="caption">
               <span class="caption-content">
-                <h2>Ice Cream</h2>
-                <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                <h2>ITV Be Launch film</h2>
+                <p class="mb-0">I provided VFX supervision on the Motion Capture shoot at Pinewood</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
@@ -172,19 +173,20 @@
           <a class="portfolio-item" href="#">
             <span class="caption">
               <span class="caption-content">
-                <h2>Strawberries</h2>
-                <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                <h2>VFX Showreel</h2>
+                <p class="mb-0">A Showcase of my Motion VFX work</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="https://vimeo.com/66636169">
             <span class="caption">
               <span class="caption-content">
-                <h2>Workspace</h2>
-                <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                <h2>Meerkats</h2>
+                <p class="mb-0">Lots of Meerkats work for me. Cheaper car insurance for you!</p>
+
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
@@ -202,19 +204,23 @@
       <a href="#" class="btn btn-xl btn-dark">Look at Me!</a>
     </div>
   </section>
-
-  <!-- Map -->
-  <section id="contact" class="map">
-    <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
-    <br />
-    <small>
-      <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
-    </small>
+  
+    <!-- Reel -->
+  <section class="content-section bg-primary text-white">
+    <div class="container text-center">
+      <h2 class="mb-4">Compositing and VFX Showreel</h2>
+	  
+    
+	
+	<iframe src="https://player.vimeo.com/video/66636169" width="640" height="360" frameborder="0" align="middle" allow="autoplay; fullscreen" allowfullscreen></iframe>
+	</div>
   </section>
+
+  
 
   <!-- Footer -->
   <footer class="footer text-center">
-    <div class="container">
+    <div class="container"  id="footer">
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
           <a class="social-link rounded-circle text-white mr-3" href="#">
@@ -222,8 +228,8 @@
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#">
-            <i class="icon-social-twitter"></i>
+          <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/josh-sutcliffe-24562211/">
+            <i class="icon-social-linkedin"></i>
           </a>
         </li>
         <li class="list-inline-item">
@@ -232,7 +238,13 @@
           </a>
         </li>
       </ul>
-      <p class="text-muted small mb-0">Copyright &copy; Your Website 2019</p>
+	  
+	  
+	  <a href="tel:447931318996">Call me on +447931318996</a>
+	  </div>
+	  <a href="mailto:josh.sutcliffe.personal@gmail.com">josh.sutcliffe.personal@gmail.com</a>
+	  
+      <p class="text-muted small mb-0">Copyright &copy; Josh Sutcliffe 2019</p>
     </div>
   </footer>
 
