--- a/index2.html
+++ b/index2.html
@@ -93,23 +93,23 @@
           <h4>
             <strong>Unity VR Development</strong>
           </h4>
-          <p class="text-faded mb-0">Development of VR experience using Unity Engine</p>
+          <p class="text-faded mb-0">Development of VR experiences using Unity Engine</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-pencil"></i>
           </span>
           <h4>
-            <strong>Redesigned</strong>
+            <strong>Compositing</strong>
           </h4>
-          <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
+          <p class="text-faded mb-0">High End Compositng using Nuke</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-like"></i>
           </span>
           <h4>
-            <strong>Favorited</strong>
+            <strong>VFX Design and Development</strong>
           </h4>
           <p class="text-faded mb-0">Millions of users
             <i class="fas fa-heart"></i>
@@ -120,9 +120,9 @@
             <i class="icon-mustache"></i>
           </span>
           <h4>
-            <strong>Question</strong>
+            <strong>VR User Experience Design</strong>
           </h4>
-          <p class="text-faded mb-0">I mustache you a question...</p>
+          <p class="text-faded mb-0">User Experience design for High Immersion VR projects</p>
         </div>
       </div>
     </div>
@@ -150,8 +150,8 @@
           <a class="portfolio-item" href="#">
             <span class="caption">
               <span class="caption-content">
-                <h2>Stationary</h2>
-                <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                <h2>Rube Goldberg VR</h2>
+                <p class="mb-0">A physics based chain reaction VR game</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
@@ -161,8 +161,8 @@
           <a class="portfolio-item" href="#">
             <span class="caption">
               <span class="caption-content">
-                <h2>Ice Cream</h2>
-                <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                <h2>ITV Be Launch film</h2>
+                <p class="mb-0">I provided VFX supervision on the Motion Capture shoot at Pinewood</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
@@ -183,8 +183,8 @@
           <a class="portfolio-item" href="#">
             <span class="caption">
               <span class="caption-content">
-                <h2>Workspace</h2>
-                <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                <h2>Meerkats</h2>
+                <p class="mb-0">Lots of Meerkats work for me. Cheaper car insurance for you!</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
